example/local/admission/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
  name: ingress-to-gardener-extension-shoot-rsyslog-relp-admission-from-world
  namespace: garden
spec:
  ingress:
  - ports:
    - port: 10250
      protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: shoot-rsyslog-relp-admission
      app.kubernetes.io/name: gardener-extension-shoot-rsyslog-relp-admission
  policyTypes:
  - Ingress
